[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/guns/Bullets/bullet.png" type="Texture" id=1]
[ext_resource path="res://assets/src/prefabs/bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/guns/Bullets/BigBullet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 4 )

[node name="bullet" type="RigidBody2D"]
collision_layer = 2147483650
collision_mask = 66
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="NormalBullet" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="BigBullet" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
